--- a/style/responsive.css
+++ b/style/responsive.css
@@ -121,8 +121,8 @@
   }
 
   .paragraph-basic,
-  .card-desc {
-    font-size: 14px;
+  .projects-area .card-desc {
+    font-size: 15px;
   }
 
   .card-title {
@@ -150,6 +150,12 @@
   .home-area .intro-text {
     font-size: 24px;
   }
+  .projects-area .card-text-wrap .responsive-links {
+    display: block;
+  }
+  .projects-area .hover-box {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 530px) {
@@ -157,7 +163,7 @@
     height: auto;
   }
   .section-inner {
-    padding: 30px 0;
+    padding: 50px 0;
   }
   .root-in-right > ul {
     justify-content: space-between;
