--- a/style/style.css
+++ b/style/style.css
@@ -56,15 +56,29 @@ section {
   color: var(--font-gray);
 }
 
-.paragraph-basic,
-.card-desc {
-  font-size: 16px;
+.paragraph-basic {
+  font-size: 14px;
   color: var(--font-gray);
 }
-
+.projects-area .card-desc {
+  margin: 10px 0 30px;
+  font-size: 16px;
+  color: #777777;
+}
+.projects-area .card-desc {
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  overflow: hidden;
+}
 .card-title {
   font-size: 24px;
   font-weight: bold;
+  color: #333;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 /* -------------------- */
@@ -75,8 +89,55 @@ section {
   background-color: #232323;
   transition: background-color 1s;
 }
-
-/* 오른쪽 메뉴 영역*/
+.contact-box {
+  display: flex;
+  align-items: center;
+  border: 1px solid #777777;
+  border-radius: 3px;
+  background-color: #fff;
+  position: fixed;
+  z-index: 1000;
+  cursor: pointer;
+  transform: translateX(300px);
+  transition: all 1s;
+}
+.contact-box:hover {
+  background-color: #eee;
+}
+.contact-box1 {
+  bottom: 20px;
+  right: 30px;
+  transition-delay: 0.2s;
+}
+.contact-box2 {
+  bottom: 70px;
+  right: 30px;
+  transition-delay: 0.4s;
+}
+.contact-box span:nth-child(1) {
+  white-space: nowrap;
+  font-size: 14px;
+  color: #232323;
+  max-width: 0;
+  overflow: hidden;
+  transition: max-width 0.5s;
+}
+.contact-box.open span:nth-child(1) {
+  max-width: 500px;
+}
+.contact-box span:nth-child(1) > span {
+  padding: 0 15px;
+}
+.contact-box span:nth-child(2) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  aspect-ratio: 1/1;
+}
+.contact-box i {
+  font-size: 24px;
+} /* 오른쪽 메뉴 영역*/
 .root-in-right {
   width: 25%;
   border-left: 1px solid #333;
@@ -104,7 +165,7 @@ section {
 }
 
 .right-menu > a {
-  font-size: 40px;
+  font-size: 38px;
   color: #aaa;
   font-family: 'Montserrat';
 }
@@ -149,9 +210,11 @@ section {
 }
 
 .home-area .intro-box {
+  max-height: 300px;
   display: flex;
   align-items: center;
   overflow: hidden;
+  transition: all 1s;
 }
 
 .home-area .intro-text {
@@ -187,6 +250,7 @@ section {
 .home-area .intro-avatar-wrap {
   margin-right: 40px;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .home-area .intro-avatar-wrap > img {
@@ -269,8 +333,8 @@ section {
   position: relative;
   opacity: 0;
   visibility: hidden;
-  transform: translateY(30px);
-  transition: transform 0.3s;
+  transform: translateY(100px);
+  transition: transform 0.5s;
 }
 .projects-area .slide-area.show {
   opacity: 1;
@@ -332,28 +396,39 @@ section {
   font-size: 12px;
   font-weight: bold;
   border-radius: 5px;
+  transition: all 0.3s;
 }
 
 .projects-area .card-text-wrap {
-  padding: 25px 20px 100px;
+  padding: 25px 25px 90px;
 }
 
 .projects-area .hover-box .card-title {
   margin-bottom: 30px;
 }
 
-.projects-area .card-desc {
-  margin: 10px 0 20px;
+.projects-area .card-text-wrap .responsive-links {
+  display: none;
+  margin-bottom: 20px;
+  font-size: 15px;
 }
-
+.projects-area .card-text-wrap .responsive-links a {
+  display: block;
+  border-radius: 5px;
+  width: max-content;
+  margin-top: 3px;
+}
+.projects-area .card-text-wrap .responsive-links a:hover {
+  text-decoration: underline;
+}
 .projects-area .card-badge {
-  padding: 6px 13px;
+  padding: 5px 10px;
   border-radius: 5px;
   position: absolute;
   bottom: 25px;
-  left: 20px;
+  left: 25px;
   color: #fff;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .projects-area .card-badge.team {
@@ -443,8 +518,17 @@ section {
 }
 
 .skills-area .skill-box {
-  padding: 6px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 15px;
   font-weight: bold;
+  cursor: pointer;
+  transition: all 0.5s;
+  position: relative;
+}
+.skills-area .skill-box:hover {
+  font-size: 24px;
 }
 
 .skill-box.Figma {
